# espeakNG-rs

./: Cargo.toml  LICENCE  README.md
src/: error.rs  lib.rs  structs.rs  utils.rs
test_data/: hello_world.pho  hello_world_mbrola.pho
tests/: base.rs  binding_test.rs  parameter.rs  phoneme.rs  voices.rs
