[package]
name = "espeakng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstr = "0.1"
espeakng-sys = "0.1"
libc = "0.2"
errno = "0.2"
strum_macros = "0.23"
once_cell = "1"
cfg-if = "1"
parking_lot = "0.12"
