[package]
name = "espeakng"
version = "0.2.0"
edition = "2021"
description = "A safe Rust wrapper around espeakNG via espeakNG-sys."
license = "MIT"
repository = "https://github.com/GnomedDev/espeakNG-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstr = "0.1"
espeakng-sys = "0.2"
libc = "0.2"
errno = "0.3"
strum_macros = "0.25"
once_cell = "1"
cfg-if = "1"
parking_lot = "0.12"
bitflags = "2.3.3"
