[package]
name = "espeakng"
version = "0.2.0"
edition = "2021"
description = "A safe Rust wrapper around espeakNG via espeakNG-sys."
license = "MIT"
repository = "https://github.com/GnomedDev/espeakNG-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
espeakng-sys = "0.2"
libc = "0.2"
errno = "0.3"
strum_macros = "0.26.2"
cfg-if = "1"
bitflags = "2.3.3"
